--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,16 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# editor directories and files
+.idea
+.vscode
+# dependencies
+node_modules/
+
+
+# compiled output
+dist/
+
+cache/
+
+
+# misc
 .DS_Store
-
-/node_modules/
-
-/deps/
-
-/dist/
